public/stylesheets/main.css
* {
  font-family: 'Fira Sans', sans-serif;
}

body {
  margin: 0;
  background-color: #EAEAEA;
  color: #333;
}

.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

nav {
  width: 100%;
  height: 60px;
  background-color: #333;
  margin-top: 0px;
  margin-bottom: 5px;
}

nav a {
  display: block;
  float: right;
  color: #EAEAEA;
  text-decoration: none;
  padding-left: 5px;
  padding-bottom: 22px;
  padding-top: 20px;
  padding-right: 10px;
}

nav a:hover {
  background-color: #EAEAEA;
  color: #333;
}

input[type='text'], input[type='password'], input[type='number'] {
  font-size: 13px;
  border-radius: 5px;
  line-height: 20px;
  border: 1px #888 solid;
  margin-bottom: 10px;
  margin-left: 5px;
  margin-right: 5px;
}

select {
  font-size: 13px;
  line-height: 20px;
  
}

label {
  margin-left: 5px;
}

fieldset {
  border: 2px #888 solid;
  margin-bottom: 5px;
}

input[type='submit'], button {
  background-color: #337aD7;
  border-color: #2e6da4;
  color: #FAFAFA;
  border-radius: 5px;
  font-size: 12px;
  line-height: 20px;
  cursor: pointer;
}

input[type='submit']:hover, button:hover {
  background-color: #2970B0;
  border-color: #204d74;
}

.sizeStyle {
  margin-top: 15px;
}
.delete-color {
  background-color: transparent;
  border-color: transparent;
  color: #333;
  opacity: 0.7;
  transition: all 0.1s ease-out;
}

.delete-color:hover {
  background-color: transparent;
  border-color: transparent;
  color: #d9534f;
  opacity: 1.0;
  transform: scale(1.1);
  transition: all 0.1s ease-in;
}

.inputSet {
  margin-bottom: 10px;
}

.alert {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
  width: 100%;
}

.alert-error {
	color: #a94442;
	background-color: #f2dede;
}

.alert-success {
	color: #3c763d;
	background-color: #dff0d8;
}

@keyframes tempFlashMessage {
  0%  {
    opacity: 0;
    tranform: translateY(-100px);
  }

  15% {
    opacity: 1;
    transform: translateY(-50px);
  }

  85% {
    opacity: 1;
    transform: translateY(-50px);
  }

  100% {
    opacity: 0;
    transform: translateY(-100px);
  }
}

.temp-flash {
  transform: translateY(-100px);
  opacity: 0;
  animation: 5s tempFlashMessage;
  position: absolute;
}

#main-container {
  padding-top: 75px;
}

.hidden-input {
  display: none;
}

.show-input {
  display: inline;
}

input[type="text"].color-edit-input {
  border: 1px solid transparent;
  background: transparent;
  transition: all 0.3s linear;
  max-width: 100px;
}

input[type="text"].color-edit-input:focus {
  border: 1px solid gray;
  background: #ffffff;
  transition: all 0.3s linear;
}

.color-edit-submit, .color-edit-delete {
  opacity: 0;
  transition: all 0.1s linear;
}
.color-edit-delete {
  background-color: #a94442;
  border: 1px solid gray;
}
.color-edit-delete:hover {
  background-color: #892422
}
.color-edit-submit {
  border: 1px solid gray;
}

.color-edit-form:hover .color-edit-submit,
.color-edit-form:hover .color-edit-delete {
  opacity: 1;
}

.color-flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.color-form-contain {
  min-width: 400px;
  margin-left: 0;
  margin-bottom: 20px;
  border-radius: 10px;
  padding-top: 10px;
}
.color-form-contain:hover {
  background-color: #bbb;
}
.fb-color-container {
  display: block;
}
.fabricBookFieldset {
  padding-top: 10px;
  border-radius: 10px;
  display: flex;
  align-items: flex-start;
}
.fabricBookFieldset:nth-of-type(2n) {
  background: #dadada;
}
.trim-pusher {
  margin-left: 357px;
}

